--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -30,24 +30,24 @@
       },
       "scheme-2": {
         "settings": {
-          "background": "#0b1e25",
+          "background": "#00293b",
           "background_gradient": "",
           "text_color": "#ffffff",
-          "primary_button_background": "#0b1e25",
+          "primary_button_background": "#2fddb6",
           "primary_button_text_color": "#ffffff",
-          "circle_button_background": "#0b1e25",
+          "circle_button_background": "#2fddb6",
           "circle_button_icon": "#ffffff"
         }
       },
       "scheme-3": {
         "settings": {
-          "background": "#0b1e25",
+          "background": "#153d41",
           "background_gradient": "",
           "text_color": "#ffffff",
           "primary_button_background": "#2fddb6",
-          "primary_button_text_color": "#0b1e25",
+          "primary_button_text_color": "#00293b",
           "circle_button_background": "#ffffff",
-          "circle_button_icon": "#0b1e25"
+          "circle_button_icon": "#00293b"
         }
       },
       "scheme-4": {
