--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -9,7 +9,8 @@
     "success_color": "#307a07",
     "warning_color": "#ed8a00",
     "error_color": "#cb2b2b",
-    "heading_font": "univers_next_n4",
+    "heading_font": "times_new_roman_i4",
+    "heading_text_transform": "normal",
     "heading_letter_spacing": 18,
     "text_font": "univers_next_n4",
     "text_font_size_desktop": 14,
