--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -9,7 +9,7 @@
     "success_color": "#307a07",
     "warning_color": "#ed8a00",
     "error_color": "#cb2b2b",
-    "heading_font": "times_new_roman_i4",
+    "heading_font": "times_new_roman_n4",
     "heading_text_transform": "normal",
     "heading_letter_spacing": 18,
     "text_font": "univers_next_n4",
@@ -23,9 +23,9 @@
           "background": "{{ shop.brand.colors.primary[0].foreground }}",
           "background_gradient": "",
           "text_color": "#0b1e25",
-          "primary_button_background": "{{ shop.brand.colors.secondary[1].background }}",
+          "primary_button_background": "#00293b",
           "primary_button_text_color": "#ffffff",
-          "circle_button_background": "{{ shop.brand.colors.secondary[1].background }}",
+          "circle_button_background": "#153d41",
           "circle_button_icon": "{{ shop.brand.colors.primary[0].foreground }}"
         }
       },
@@ -57,9 +57,9 @@
           "background_gradient": "",
           "text_color": "#ffffff",
           "primary_button_background": "#ffffff",
-          "primary_button_text_color": "#1c1c1c",
+          "primary_button_text_color": "#00293b",
           "circle_button_background": "#ffffff",
-          "circle_button_icon": "#1c1c1c"
+          "circle_button_icon": "#00293b"
         }
       }
     }
