adding text sizes for homepage

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,12 +1,3 @@
-/*
- * ------------------------------------------------------------
- * IMPORTANT: The contents of this file are auto-generated.
- *
- * This file may be updated by the Shopify admin theme editor
- * or related systems. Please exercise caution as any changes
- * made to this file may be overwritten.
- * ------------------------------------------------------------
- */
 {
   "current": {
     "section_vertical_spacing": "md",
@@ -22,10 +13,23 @@
     "heading_text_transform": "normal",
     "heading_letter_spacing": 18,
     "text_font": "univers_next_n4",
+    "text_font_size_mobile": 15,
     "text_font_size_desktop": 14,
     "button_letter_spacing": 18,
-    "favicon": "shopify://shop_images/dearly-beloved-favicon-2.png",
+    "favicon": "shopify:\/\/shop_images\/dearly-beloved-favicon-2.png",
     "content_for_index": [],
+    "blocks": {
+      "4981902369724952902": {
+        "type": "shopify:\/\/apps\/vo-product-options\/blocks\/embed-block\/430cbd7b-bd20-4c16-ba41-db6f4c645164",
+        "disabled": false,
+        "settings": {}
+      },
+      "2104245418471043333": {
+        "type": "shopify:\/\/apps\/17track\/blocks\/app-embed\/1519e068-e330-4e0b-92dd-0a3263bfceda",
+        "disabled": false,
+        "settings": {}
+      }
+    },
     "color_schemes": {
       "scheme-1": {
         "settings": {
