hero image icon color to white

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -28,6 +28,20 @@
         "type": "shopify:\/\/apps\/17track\/blocks\/app-embed\/1519e068-e330-4e0b-92dd-0a3263bfceda",
         "disabled": false,
         "settings": {}
+      },
+      "15683396631634586217": {
+        "type": "shopify:\/\/apps\/inbox\/blocks\/chat\/841fc607-4181-4ad1-842d-e24d7f8bad6b",
+        "disabled": false,
+        "settings": {
+          "button_color": "#000000",
+          "secondary_color": "#FFFFFF",
+          "ternary_color": "#6A6A6A",
+          "button_icon": "chat_bubble",
+          "button_text": "chat_with_us",
+          "button_horizontal_position": "bottom_right",
+          "button_vertical_position": "lowest",
+          "greeting_message": ""
+        }
       }
     },
     "color_schemes": {
@@ -38,8 +52,8 @@
           "text_color": "#0b1e25",
           "primary_button_background": "#00293b",
           "primary_button_text_color": "#ffffff",
-          "circle_button_background": "#153d41",
-          "circle_button_icon": "{{ shop.brand.colors.primary[0].foreground }}"
+          "circle_button_background": "#ffffff",
+          "circle_button_icon": "#1c1c1c"
         }
       },
       "scheme-2": {
